<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <packaging>pom</packaging>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>2.1.8.RELEASE</version>
        <relativePath/>
    </parent>

    <groupId>hu.bme.szakdolgozat</groupId>
    <artifactId>ProjectAssistant</artifactId>
    <version>1.0</version>

    <modules>
        <module>Authentication</module>
        <module>ProjectManager</module>
        <module>Frontend</module>
        <module>MessageProvider</module>
        <module>MongoDB</module>
        <module>ActiveMQ</module>
        <module>AuthenticationDB</module>
        <module>Jenkins</module>
    </modules>

    <properties>
        <spring.boot.version>2.1.8.RELEASE</spring.boot.version>
        <hibernate.version>5.4.5.Final</hibernate.version>
        <lombok.version>1.18.10</lombok.version>
        <jsonwebtoken.jjwt.version>0.9.1</jsonwebtoken.jjwt.version>
        <freemarker.version>2.1.8.RELEASE</freemarker.version>
        <oauth.client.version>5.1.6.RELEASE</oauth.client.version>
        <java.version>11</java.version>

        <profile>test</profile>

        <mongo.host>localhost</mongo.host>
        <mongo.database.name>projectAssistant</mongo.database.name>
        <mongo.root.username>root</mongo.root.username>
        <mongo.root.password>example</mongo.root.password>
        <mongo.username>springboot</mongo.username>
        <mongo.password>password123</mongo.password>

        <authentication.database.host>localhost</authentication.database.host>
        <authentication.database.name>projectAssistant</authentication.database.name>
        <authentication.database.port>27020</authentication.database.port>
        <authentication.database.uri>mongodb://localhost:27020/projectAssistant</authentication.database.uri>

        <activemq.queue.name>projectAssistant</activemq.queue.name>
        <activemq.broker.url>tcp://localhost:61616</activemq.broker.url>
        <activemq.producer.name>myproducer</activemq.producer.name>
        <activemq.producer.password>myproducerpassword</activemq.producer.password>
        <activemq.consumer.name>myconsumer</activemq.consumer.name>
        <activemq.consumer.password>myconsumerpassword</activemq.consumer.password>
        <activemq.admin.username>admin</activemq.admin.username>
        <activemq.admin.password>admin123</activemq.admin.password>

        <mail.host>smtp.gmail.com</mail.host>
        <mail.port>587</mail.port>
        <mail.username>spring.onlabor@gmail.com</mail.username>
        <mail.password>SpringOnlabor123</mail.password>
        <email.enabled>true</email.enabled>

        <google.cliendId>30072480563-b2ej91p8rhsr3mjrtgbhogm73u3rlrmb.apps.googleusercontent.com</google.cliendId>
        <google.client.secret>mlcdz29Cu43WTj_RcZfZXCWl</google.client.secret>
        <oauth.redirect>http://localhost:9200/oauth2/callback/{registrationId}</oauth.redirect>

        <tokenSecret>926D96C90030DD58429D2751AC1BDBBC</tokenSecret>
        <tokenExpirationMsec>864000000</tokenExpirationMsec>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <type>pom</type>
                <version>${spring.boot.version}</version>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-starter-data-jpa</artifactId>
                <version>${spring.boot.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-starter-security</artifactId>
                <version>${spring.boot.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework.security</groupId>
                <artifactId>spring-security-oauth2-client</artifactId>
                <version>${oauth.client.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-starter-freemarker</artifactId>
                <version>${freemarker.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-starter-activemq</artifactId>
                <version>${spring.boot.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-starter-data-mongodb</artifactId>
                <version>${spring.boot.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-starter-test</artifactId>
                <version>${spring.boot.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-starter-mail</artifactId>
                <version>${spring.boot.version}</version>
            </dependency>
            <dependency>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>${lombok.version}</version>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>io.jsonwebtoken</groupId>
                <artifactId>jjwt</artifactId>
                <version>${jsonwebtoken.jjwt.version}</version>
            </dependency>
            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter-api</artifactId>
                <version>5.4.2</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter-engine</artifactId>
                <version>5.4.2</version>
                <scope>test</scope>
            </dependency>
            <!-- Java 11 not contains xml api -->
            <dependency>
                <groupId>javax.xml.bind</groupId>
                <artifactId>jaxb-api</artifactId>
                <version>2.3.1</version>
            </dependency>
            <dependency>
                <groupId>com.sun.xml.bind</groupId>
                <artifactId>jaxb-core</artifactId>
                <version>2.3.0.1</version>
            </dependency>
            <dependency>
                <groupId>com.sun.xml.bind</groupId>
                <artifactId>jaxb-impl</artifactId>
                <version>2.3.2</version>
            </dependency>
            <dependency>
                <groupId>javax.activation</groupId>
                <artifactId>activation</artifactId>
                <version>1.1.1</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.22.1</version>
            </plugin>
        </plugins>
    </build>
</project>
